package uk.co.real_logic.protobuf.examples;

option java_package = "uk.co.real_logic.protobuf.fix";
option java_outer_classname = "Fix";

message Decimal64
{
    required int64 mantissa = 1;
    optional uint32 exponent = 2 [default = 7];
}

message IntQty32
{
    required int32 mantissa = 1;
    optional uint32 exponent = 2 [default = 0];
}

message MdIncGrp
{
    enum MdUpdateAction
    {
        NEW = 0;
        CHANGE = 1;
        DELETE = 2;
        OVERLAY = 5;
    }

    enum Side
    {
        BUY = 1;
        SELL = 2;
    }

    enum MdEntryType
    {
        BID = 0;
        OFFER = 1;
        TRADE = 2;
        OPENING_PRICE = 4;
        SETTLEMENT_PRICE = 6;
        TRADING_SESSION_HIGH_PRICE = 7;
        TRADING_SESSION_LOW_PRICE = 8;
    }

    required uint64 tradeId = 1;
    required uint64 securityId = 2;
    required Decimal64 mdEntryPx = 3;
    required IntQty32 mdEntrySize = 4;
    required uint32 numberOfOrders = 5;
    required MdUpdateAction mdUpdateAction = 6;
    required uint32 repSeq = 7;
    required Side aggressorSide = 8;
    optional MdEntryType mdEntryType = 9 [default = TRADE];
}

message MarketDataIncrementalRefreshTrades
{
    enum MatchEventIndicator
    {
        MID_EVENT = 0;
        BEGINNING_EVENT = 1;
        END_EVENT = 2;
        BEGINNING_AND_END_EVENT = 3;
    }

    required uint64 transactTime = 1;
    required uint32 eventTimeDelta = 2;
    required MatchEventIndicator matchEventIndicator = 3;
    repeated MdIncGrp mdIncGroup = 4;
}